--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.amcharts.com/lib/5/lang/locale_ru_RU.js"></script>
-    <title>Vite + Vue</title>
+    <title>LeadHit</title>
   </head>
   <body>
     <div id="app"></div>
